Sat Jun  3 05:19:59 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/examples/Log/Event/run_test.pl:
        * orbsvcs/examples/Log/Notify/run_test.pl:
        * orbsvcs/examples/Log/RTEvent/run_test.pl:

          Kill the Consumer process instead of considering the test to be
          failed if it did not exit itself.  The Consumer connects to the
          Log Factory's event channel, not the event/notification channel
          for the log, so even though its disconnect_push_consumer method
          invokes shutdown on the orb, the it doesn't matter since it's
          not going to be called when the log is destroyed.

Sat Jun  3 05:03:15 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp:
          Added ACE_MT guards around new synchronization code to make it
          single-thread-build safe.

Sat Jun  3 04:26:08 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/ORB_Local_Config/Two_DLL_ORB/README:

          Added a bit of a documentation on the test

        * tests/ORB_Local_Config/Two_DLL_ORB/Test.cpp:

          Modified to conditionaly excersise one of the two test
          scenarios. Originally, the test used SSLIOP, however that
          service is not built by default. So the change makes use of
          another service, which is normally available in "default"
          builds.

        * tests/ORB_Local_Config/Two_DLL_ORB/primary-csd.conf:
        * tests/ORB_Local_Config/Two_DLL_ORB/primary-ssl.conf:
        * tests/ORB_Local_Config/Two_DLL_ORB/secondary-csd.conf:
        * tests/ORB_Local_Config/Two_DLL_ORB/secondary-empty.conf:
        * tests/ORB_Local_Config/Two_DLL_ORB/secondary-ssl.conf:

          Added a simple names for the the configuration files.

        * tests/ORB_Local_Config/Two_DLL_ORB/Service_Config_ORB_Test.conf:
        * tests/ORB_Local_Config/Two_DLL_ORB/Service_Config_ORB_Test2.conf: